lib/src/thorvg_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/thorvg.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class ThorVGFlutterBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ThorVGFlutterBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ThorVGFlutterBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<FlutterView> create() {
    return _create();
  }

  late final _createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FlutterView> Function()>>(
          'create');
  late final _create =
      _createPtr.asFunction<ffi.Pointer<FlutterView> Function()>();

  bool destroy(
    ffi.Pointer<FlutterView> view,
  ) {
    return _destroy(
      view,
    );
  }

  late final _destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<FlutterView>)>>(
          'destroy');
  late final _destroy =
      _destroyPtr.asFunction<bool Function(ffi.Pointer<FlutterView>)>();

  ffi.Pointer<ffi.Char> error(
    ffi.Pointer<FlutterView> view,
  ) {
    return _error(
      view,
    );
  }

  late final _errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<FlutterView>)>>('error');
  late final _error = _errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<FlutterView>)>();

  ffi.Pointer<ffi.Float> size(
    ffi.Pointer<FlutterView> view,
  ) {
    return _size(
      view,
    );
  }

  late final _sizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Float> Function(ffi.Pointer<FlutterView>)>>('size');
  late final _size = _sizePtr
      .asFunction<ffi.Pointer<ffi.Float> Function(ffi.Pointer<FlutterView>)>();

  double duration(
    ffi.Pointer<FlutterView> view,
  ) {
    return _duration(
      view,
    );
  }

  late final _durationPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Pointer<FlutterView>)>>(
          'duration');
  late final _duration =
      _durationPtr.asFunction<double Function(ffi.Pointer<FlutterView>)>();

  double totalFrame(
    ffi.Pointer<FlutterView> view,
  ) {
    return _totalFrame(
      view,
    );
  }

  late final _totalFramePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Pointer<FlutterView>)>>(
          'totalFrame');
  late final _totalFrame =
      _totalFramePtr.asFunction<double Function(ffi.Pointer<FlutterView>)>();

  double curFrame(
    ffi.Pointer<FlutterView> view,
  ) {
    return _curFrame(
      view,
    );
  }

  late final _curFramePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Pointer<FlutterView>)>>(
          'curFrame');
  late final _curFrame =
      _curFramePtr.asFunction<double Function(ffi.Pointer<FlutterView>)>();

  void resize(
    ffi.Pointer<FlutterView> view,
    int w,
    int h,
  ) {
    return _resize(
      view,
      w,
      h,
    );
  }

  late final _resizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<FlutterView>, ffi.Int, ffi.Int)>>('resize');
  late final _resize = _resizePtr
      .asFunction<void Function(ffi.Pointer<FlutterView>, int, int)>();

  bool load(
    ffi.Pointer<FlutterView> view,
    ffi.Pointer<ffi.Char> data,
    ffi.Pointer<ffi.Char> mimetype,
    int width,
    int height,
  ) {
    return _load(
      view,
      data,
      mimetype,
      width,
      height,
    );
  }

  late final _loadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<FlutterView>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int)>>('load');
  late final _load = _loadPtr.asFunction<
      bool Function(ffi.Pointer<FlutterView>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int, int)>();

  ffi.Pointer<ffi.Uint8> render(
    ffi.Pointer<FlutterView> view,
  ) {
    return _render(
      view,
    );
  }

  late final _renderPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<FlutterView>)>>('render');
  late final _render = _renderPtr
      .asFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<FlutterView>)>();

  bool frame(
    ffi.Pointer<FlutterView> view,
    double no,
  ) {
    return _frame(
      view,
      no,
    );
  }

  late final _framePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<FlutterView>, ffi.Float)>>('frame');
  late final _frame =
      _framePtr.asFunction<bool Function(ffi.Pointer<FlutterView>, double)>();

  bool update(
    ffi.Pointer<FlutterView> view,
  ) {
    return _update(
      view,
    );
  }

  late final _updatePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<FlutterView>)>>(
          'update');
  late final _update =
      _updatePtr.asFunction<bool Function(ffi.Pointer<FlutterView>)>();
}

final class _FlutterView extends ffi.Opaque {}

typedef FlutterView = _FlutterView;
